PWARE-68 Organization users can still perform functions when member of an Organisation team (#51)
* PWARE-68 Organization users can perform all functions after teams pattern migration when in the Organisation team

* Get members in bulk

* Get members in bulk

* Update .trivyignore to include CVE-2025-22228 and CVE-2025-24813